--- a/user-onboarding/package.json
+++ b/user-onboarding/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "cypress": "^5.6.0",
     "eslint": "^7.13.0",
     "eslint-plugin-react": "^7.21.5",
     "less": "^3.12.2",
